# f1-23-telemetry

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
f1_23_telemetry/: __init__.py  appendices.py  listener.py  main.py  packets.py
