[project]
name = "f1-23-telemetry"
version = "0.0.1"
authors = [
  { name="Chris Hannam", email="ch@chrishannam.co.uk" },
]
description = "Decode F1 23 telemetry data."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chrishannam/f1-23-telemetry"
"Bug Tracker" = "https://github.com/chrishannam/f1-23-telemetry/issues"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
skip-string-normalization = true

[tool.poetry]
name = "f1-23-telemetry"
version = "0.1.0"
description = ""
authors = ["Chris Hannam <ch@chrishannam.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "f1_23_telemetry"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
